src/objects/Compliance_Audit__c.object
<CustomObject>
    <fields>
        <fullName>AE_Captured__c</fullName>
        <label>AE Captured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the compliance auditor</description>
        <label>Auditor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Listened_To__c</fullName>
        <description>Does not factor in scoring.</description>
        <inlineHelpText>Does not factor in scoring.</inlineHelpText>
        <label>Call Listened To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The case that the Compliance Score is on.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Compliance Audits</relationshipLabel>
        <relationshipName>Compliance_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_Codes__c</fullName>
        <label>Comment Codes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Complaint_Captured__c</fullName>
        <label>Critical Complaint Captured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denominator__c</fullName>
        <formula>IF(
OR(
(((TEXT(AE_Captured__c)) = &apos;no&apos;)),(TEXT(Critical_Complaint_Captured__c))=&apos;no&apos;) , 1,
(IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, 7.5)) +
(IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, 5)) +
(IF(TEXT(Summary__c) = &apos;N/A&apos;, 0, 20)) +
(IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, 2.5)) +
(IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, 2.5)) +
(IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, 2.5))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denominator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <formula>(Numerator__c / Denominator__c)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Prediction Model</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Products__c</fullName>
        <label>Local Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numerator__c</fullName>
        <formula>IF(
OR(
(((TEXT(AE_Captured__c)) = &apos;no&apos;)),(TEXT(Critical_Complaint_Captured__c))=&apos;no&apos;) , 0,
(IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Comment_Codes__c)))*IF(TEXT(Comment_Codes__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Local_Products__c)))*IF(TEXT(Local_Products__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Probe_Safety_Assessment__c)))*IF(TEXT(Probe_Safety_Assessment__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Probe_Survey__c)))*IF(TEXT(Probe_Survey__c) = &apos;N/A&apos;, 0, 0.075)) +
(IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Production_Code__c)))*IF(TEXT(Production_Code__c) = &apos;N/A&apos;, 0, 0.05)) +
(IF(TEXT(Summary__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Summary__c)))*IF(TEXT(Summary__c) = &apos;N/A&apos;, 0, 0.20)) +
(IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Used_same_version_before__c)))*IF(TEXT(Used_same_version_before__c) = &apos;N/A&apos;, 0, 0.025)) +
(IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Where_Bought__c)))*IF(TEXT(Where_Bought__c) = &apos;N/A&apos;, 0, 0.025)) +
(IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, VALUE(TEXT(Expiration_Date__c)))*IF(TEXT(Expiration_Date__c) = &apos;N/A&apos;, 0, 0.025)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probe_Safety_Assessment__c</fullName>
        <label>Probe - Safety Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probe_Survey__c</fullName>
        <label>Probe - Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Code__c</fullName>
        <label>Production Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_same_version_before__c</fullName>
        <label>Used same version before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_Bought__c</fullName>
        <label>Where Bought</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compliance Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000000}</displayFormat>
        <label>Compliance Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>